--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # thirdweb server/client
 THIRDWEB_SECRET_KEY=your_thirdweb_server_secret   # from thirdweb dashboard
-SERVER_WALLET_ADDRESS=0xYourFujiWalletAddress     # wallet that will receive payments
+SERVER_WALLET_ADDRESS= 0x3C6da0FfDAb52b9e7e3988d9585cfa86Bdc02970     # wallet that will receive payments
 
 # Avalanche Fuji
-X402_NETWORK=avalanche-fuji                       # or you’ll pass avalancheFuji chain object in code
+X402_NETWORK=avalanche-fuji                      
 
-# (Optional) token override if you want non-default token
 X402_ASSET=USDC
 X402_PRICE_WASH_BASIC=5.0
+
+VITE_THIRDWEB_CLIENT_ID=your_thirdweb_client_id
